# RoboticArmWS

./: .gitignore  README.MD
.devcontainer/: devcontainer.json
src/: ros2.repos
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: TargetPosition.msg
src/robotic_arm/: CMakeLists.txt  package.xml
src/robotic_arm/config/: controller.yaml  params.yaml
src/robotic_arm/launch/: real.launch.py  sim.launch.py
src/robotic_arm/model/: gazebo.xacro  model.real.xacro  model.xacro  parameters.xacro
src/robotic_arm/src/: arm_controller.cpp
src/ros_hardware/: CMakeLists.txt  package.xml  ros_hardware.xml
src/ros_hardware/include/ros_hardware/: ros_hardware_interface.hpp
src/ros_hardware/src/: ros_hardware_interface.cpp
